--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: "+10:00" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: "Australia/Brisbane" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -71,6 +71,11 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/theaquaboy"
+
+comments:
+  provider: "disqus"
+  disqus:
+    shortname: "wytamma-blog"
 
 footer:
   links:
