--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "little things"
+title: "the little things"
 email: "wytamma.wirth@me.com"
 description: "Enjoying the little things like antibodies, ion channels, and pip installs."
 twitter_username: wytamma
